(add new changes on top of this file)

Änderungen
----------
v0.6.6 (??.02.2010) (not released)
 * New unit test for ListBuilder

v0.6.5 (25.02.2010) (not released)
 * ListBuilder supports subpart for empty lists.
 * All occurrences of split() replaced with explode() to avoid warnings in PHP 5.3
 * Some Bugfixes in tx_rnbase_util_Templates

v0.6.4 (17.02.2010) (not released)
 * New API for Caches
 * util_Link: it is possible to add more static parameter by Typoscript: 
linkcfg.useKeepVars.add = ::type=300, mykey=myvalue


v0.6.3 (05.02.2010) (not released)
 * tx_rnbase_util_Link: New method initByTS() and it is possible to generate absolute URLs

v0.6.1 (05.02.2010) (not released)
 * tx_rnbase_util_Misc: Include tstemplate.php in prepareTSFE()
 * BaseMarker: Missing include of tx_rnbase fixed
 * tx_rnbase_configurations: New option deep in method get(). Thanks to Lars Heber.
 * Update for TYPO3 4.3. New usage for tx_rnbase::makeInstance(). This methode can be used to instanciate object with parameters for constructor. Also backward compatible with lower versions of TYPO3.
 * Deprecated function calls removed
 * BaseFilter: new static methods for handlePageBrowser() and handleCharBrowser()
 * Link: Support Parameters for other extensions. Use "qualifier::param" as key.
 * All dependencies to tx_div removed

v0.6.0 (30.12.2009)
 * SearchBase: CUSTOM orderby clause is possible
 * SearchGeneric: double alias declaration for base table removed

v0.5.5 (23.12.2009) (not released)
 * There is a new class tx_rnbase_util_Templates for marker substitutions HTML templates. It does the same as substituteMarkerArrayCached but has no call to $GLOBALS['TT']. This heavily reduces memory consumption. 

v0.5.4 (15.12.2009) (not released)
 * New class tx_rnbase_mod_Tables
 * New method tx_rnbase::getClassInfo()
 * additional BE user access removed from BaseModule
 * tx_rnbase_configurations::createLink will now return instances of tx_rnbase_util_Link

v0.5.3 (22.11.2009)